# mcp-demo

./: .env.sample  README.md  models.py  pyproject.toml  tavily_client.py
src/: client.py  models.py  streamlit.py  tavily_client.py
