[project]
name = "mcp-edwards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-identity>=1.21.0",
    "azure-search-documents>=11.5.2",
    "azure-storage-blob>=12.25.1",
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.22",
    "mcp[cli]>=1.6.0",
    "nltk>=3.9.1",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "streamlit>=1.44.1",
]
