[project]
name = "mcp-demo"
version = "0.1.0"
description = "Testing MCP clients"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.22",
    "langchain-community>=0.3.20",
    "langchain-mcp-adapters>=0.0.3",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.22",
    "mcp[cli]>=1.6.0",
    "streamlit>=1.44.1",
]
